# google_calender_rs

./: .cursorrules  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md  timezone_examples.rs
src/: calendar_client.rs  config.rs  error.rs  event.rs  http_client.rs  lib.rs  mock.rs  timezone_utils.rs
tests/: test_integration.rs
