[package]
name = "rust_template"
version = "0.1.0"
edition = "2021"

[[example]]
name = "timezone_examples"
path = "examples/timezone_examples.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
base64 = "0.21"
